--- a/Esquema_en.qmd
+++ b/Esquema_en.qmd
@@ -499,7 +499,7 @@ Se hace una resonancia solamente con el cilindro para planificar las agujas y co
 
 ::: {layout-nrow="2"}
 
-{{< video https://www.youtube.com/embed/8CICX-2W92Q?&autoplay=1&playlist=8CICX-2W92Q&loop=1&mute=1&hl=en&answer=140174 weight="100" height="220" >}}
+{{< video https://www.youtube.com/embed/8CICX-2W92Q?&autoplay=1&playlist=8CICX-2W92Q&loop=1&mute=1&hl=en&answer=140174 width="130" height="220" >}}
 
 ![](img/viena1.png){width="100%"}
 
